<resources>
    //App ID and Banner Ad ID, Interstitial ad ID
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>

<!--    Below are the IDs for TEST Ad of the Admob-->
<!--    AdMob App ID: ca-app-pub-3940256099942544~3347511713-->
<!--    Banner 	ca-app-pub-3940256099942544/6300978111-->
<!--    Interstitial 	ca-app-pub-3940256099942544/1033173712-->


    <string name="app_name">BCS English</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">MCQ Section</string>
    <string name="title_notifications">Memorize</string>
    <string name="no_explanation"><h2>No <span style="text-decoration: underline;">explanation</span>
        is given for this question!</h2></string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="memorize">MEMORIZE</string>
    <string name="mcq">MCQ</string>

    <string name="primary">Primary</string>
    <string name="learning">Learning</string>
    <string name="master">Master</string>
    <string name="right">RIGHT!</string>
    <string name="wrong">WRONG!</string>

    //mcq
    <string name="mcq_parts_of_speech">bcs_evs</string>
    <string name="mcq_Idioms_phrases">bcs_idioms_phrases</string>
    <string name="mcq_clause_correction">mcq_cls_corr</string>
    <string name="mcq_trans_sentence">mcq_trans_sentence</string>
    <string name="mcq_trans_voice">mcq_trans_voice</string>
    <string name="mcq_trans_degree">mcq_trans_degree</string>
    <string name="mcq_trans_word_mean">mcq_trans_word_mean</string>
    <string name="mcq_synonym">mcq_synonym</string>
    <string name="mcq_antonym">mcq_antonym</string>
    <string name="mcq_spelling">mcq_spelling</string>
    <string name="mcq_words_extra">mcq_words_extra</string>
    <string name="mcq_narration">mcq_narration</string>
    <string name="mcq_conditonal">mcq_conditonal</string>
    <string name="mcq_analogy">mcq_analogy</string>
    <string name="mcq_diction">mcq_diction</string>
    <string name="mcq_translation">mcq_translation</string>

    //memorise
    <string name="memorise_Parts_of_Speech">mem_parts_speech</string>
    <string name="memorise_Idioms_Phrases">bcs_pos_memorize</string>
    <string name="memorise_Clause_Correction">bcs_cls_corr_memorize</string>
    <string name="memorise_Transformation_Sentences">mem_trans_sent</string>
    <string name="memorise_words_meaning">mem_words</string>
    <string name="memorise_additional_section">mem_additional</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bcs_book_list">BCS Book List</string>
    <string name="bcs_syllabus">BCS Syllabus</string>
    <string name="send_email">Send Email</string>
    <string name="facebook_group">Facebook Group</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="logo_image_text">Logo Image</string>
    <string name="email_address">eee.videotutorial@gmail.com</string>
    <string name="subject">Subject:</string>
    <string name="write_the_subject_of_your_mail">Write the Subject of your Mail!</string>
    <string name="message">Message:</string>
    <string name="you_message">Write you message here.</string>
    <string name="send">send</string>
    <string name="reciverOfMail">To:</string>
    <string name="ee">ee</string>
    <string name="e">e</string>
    <string name="parts_of_speech">Parts of Speech</string>
    <string name="idioms_and_phrases">Idioms and Phrases</string>
    <string name="clauses_and_corrections">Clauses and Corrections</string>
    <string name="transformation_of_sentences">Transformation of Sentences</string>
    <string name="transformation_of_voice">Transformation of Voice</string>
    <string name="transformation_of_degrees">Transformation of Degrees</string>
    <string name="words_meaning">Words Meaning</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="spellings">Spellings</string>
    <string name="words_remaining_part">Words Remaining Part</string>
    <string name="narration">Narration</string>
    <string name="conditional_sentence">Conditional Sentence</string>
    <string name="analogy">Analogy</string>
    <string name="diction">Diction</string>
    <string name="translation">Translation</string>
    <string name="mcq_banner">MCQ Section\nBCS English</string>
    <string name="logo_image">Logo Image</string>
    <string name="memorize_banner">Memorize Section\nBCS English</string>
    <string name="additional_chapters">Additional Chapters</string>

</resources>
