<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="600dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_image"/>

            <Button
                android:id="@+id/mBtn_privacy"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/privacy_policy"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@color/option_3"/>
            <Button
                android:id="@+id/mBtn_FBpage"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/facebook_page"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@color/option_3"/>
            <Button
                android:id="@+id/mBtn_FBgroup"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/facebook_group"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@color/option_3"/>
            <Button
                android:id="@+id/mBtn_sendEmail"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/send_email"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@color/option_3"/>
            <Button
                android:id="@+id/mBtn_bcsSyllabus"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/bcs_syllabus"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@color/option_3"/>
            <Button
                android:id="@+id/mBtn_bcsBookList"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/bcs_book_list"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@color/option_3"/>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="This is for Banner Ad"
                android:minHeight="50dp"
                app:adSize="SMART_BANNER"
                app:adUnitId="@string/banner_id" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>