<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.saiful.bcsenglish.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_homeWebViewDefault"
            app:destination="@id/homeWebViewDefault" />
        <action
            android:id="@+id/action_navigation_home_to_sendFragment"
            app:destination="@id/sendFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.saiful.bcsenglish.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_mcqRecView"
            app:destination="@id/mcqRecView"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.saiful.bcsenglish.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_memoriseRecView"
            app:destination="@id/memoriseRecView"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@+id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/mcqRecView"
        android:name="com.saiful.bcsenglish.mcq.McqRecView"
        android:label="@string/mcq"
        tools:layout="@layout/option_recycler_view_list" />

    <fragment
        android:id="@+id/memoriseRecView"
        android:name="com.saiful.bcsenglish.memorise.MemoriseRecView"
        android:label="@string/memorize"
        tools:layout="@layout/option_recycler_view_list" />

    <fragment
        android:id="@+id/homeWebViewDefault"
        android:name="com.saiful.bcsenglish.ui.fragment_home.WebViewDefault"
        android:label="Default WebView"
        tools:layout="@layout/fragment_web_view_default" />
    <fragment
        android:id="@+id/sendFragment"
        android:name="com.saiful.bcsenglish.ui.sendMail.SendFragment"
        android:label="SendFragment"
        tools:layout="@layout/fragment_send"/>

</navigation>