<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:foregroundGravity="top"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:autofillHints="This is for Banner Ad"
                android:minHeight="50dp"
                app:adSize="SMART_BANNER"
                app:adUnitId="@string/banner_id" />

            <TextView
                android:id="@+id/mTxt_BannerMcq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="150dp"
                android:padding="10dp"
                android:text="@string/mcq_banner"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_POS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/parts_of_speech"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_IdiomPhrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/idioms_and_phrases"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_ClauseCorrections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/clauses_and_corrections"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_TransformationSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/transformation_of_sentences"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Voice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/transformation_of_voice"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Degrees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/transformation_of_degrees"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_WordMeaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/words_meaning"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Synonyms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/synonyms"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Antonyms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/antonyms"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Spelling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/spellings"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_WordRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/words_remaining_part"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Narration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/narration"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_ConditionalSentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/conditional_sentence"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Analogy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/analogy"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Diction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/diction"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_1"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/translation"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>