<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="top"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="This is for Banner Ad"
                android:minHeight="50dp"
                app:adSize="SMART_BANNER"
                app:adUnitId="@string/banner_id" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memorize_banner"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:elevation="5dp"
                android:minHeight="150dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/mTxt_POS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_3"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/parts_of_speech"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_IdiomPhrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_3"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/idioms_and_phrases"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_ClauseCorrections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_3"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/clauses_and_corrections"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_SentenceTransformations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_3"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/transformation_of_sentences"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_Words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_3"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/words_meaning"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mTxt_AdditionalSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/option_3"
                android:elevation="5dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="false"
                android:minHeight="100dp"
                android:padding="10dp"
                android:text="@string/additional_chapters"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>